# atom_quest

./: README.md
backend/: .envexample  .gitignore  Cargo.toml  README.md  mock_data_script.py  pyproject.toml  users_insert_script.py
backend/migrations/: 001_core_schema.sql  002_bonus_features.sql
backend/shell_scripts/: 00_reset.sh  01_health.sh  02_auth.sh  03_goals.sh  04_manager.sh  05_achievements.sh  06_score.sh  07_checkins.sh  08_admin.sh  09_reports.sh  _common.sh  change_password.sh  forgot_password.sh  generate_all_reports.sh  leaderboards.sh  login_submit_fetch.sh  run_all.sh  shell_scripts.sh  test_admin.sh  test_faculty_login.sh  test_student_login.sh
backend/src/: config.rs  cors.rs  escalation.rs  logging.rs  main.rs
backend/src/api/: achievements.rs  admin.rs  analytics.rs  auth.rs  escalation_api.rs  faculty_auth.rs  faculty_reports.rs  goals.rs  leaderboard.rs  manager.rs  middleware.rs  mod.rs  notifications_api.rs  reports.rs  sso.rs  stats.rs
backend/src/codechef/: api.rs  worker.rs
backend/src/codeforces/: api.rs  worker.rs
backend/src/db/: achievements.rs  audit.rs  backup.rs  cycles.rs  faculty.rs  goals.rs  import.rs  item.rs  mod.rs  student.rs  user.rs  users.rs
backend/src/db/models/: faculty.rs  mod.rs  student.rs
backend/src/leetcode/: api.rs  mod.rs  worker.rs
backend/src/tui/: app.rs  events.rs  mod.rs  terminal.rs  ui.rs
backend/src/utils/: email.rs  hash_password.rs  mod.rs  notifications.rs  url_parser.rs
frontend/: .env.example  .gitignore  SETUP.md  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppSidebar.tsx  DashboardLayout.tsx  GoalCard.tsx  ProgressBar.tsx  RoleGuard.tsx  ScoreGauge.tsx  StatCard.tsx  StatusBadge.tsx  ThemeToggle.tsx  WeightageBar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  excelExport.ts  mockData.ts  types.ts
frontend/src/pages/: AchievementEntry.tsx  AdminAuditLog.tsx  AdminDashboard.tsx  AdminUsers.tsx  AzureCallbackPage.tsx  CheckinView.tsx  EmployeeDashboard.tsx  FacultyDashboard.tsx  FacultyDashboard_old.tsx  FacultyLoginPage.tsx  ForgotPasswordPage.tsx  GoalSheetEditor.tsx  LandingPage.tsx  LeaderboardPage.tsx  LoginPage.tsx  ManagerDashboard.tsx  NotFound.tsx  ReportsPage.tsx  ResetPasswordPage.tsx  StudentDashboard.tsx  StudentLoginPage.tsx  TeamGoalReview.tsx
