[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
csv = "1.3"
rust_xlsxwriter = "0.68"

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "chrono"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing-appender = "0.2.4"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.12.2"

# Email
lettre = { version = "0.11.2", features = ["smtp-transport", "tokio1", "tokio1-native-tls", "builder"] }
tokio-native-tls = "0.3.1"

# Azure AD / Entra ID SSO  (OIDC discovery + token validation)
openidconnect = { version = "3.5", features = ["reqwest"] }

# Async scheduling for escalation background jobs
tokio-cron-scheduler = "0.10"
